--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flask DataFrame</title>
+    <title>Stalarm</title>
     <link rel="stylesheet" 
           href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="container mt-4">
-        <h2>DataFrame Output</h2>
+        <h1>Stalarm</h1>
+        <h2>Stock data</h2>
         {{ table | safe }}  <!-- Render DataFrame as HTML -->
     </div>
 </body>
