Two more columns in webpage. Limits %

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flask DataFrame</title>
+    <title>Stalarm</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" 
@@ -13,6 +13,7 @@
 </head>
 <body>
     <div class="container mt-4">
+        <h1>Stalarm</h1>
         <h2>Stock Data</h2>
         <table class="table table-striped">
             <thead>
