--- a/app/static/style.css
+++ b/app/static/style.css
@@ -8,3 +8,8 @@
 .td-inc__limit_reached_after_decrease_limit_reached{
     font-weight: bold;
 }
+
+.table.table-striped thead tr th{
+    background-color: blue;
+    color: white; /* Optional: Make text color white to be visible on black background */
+}
