--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
     <div class="container mt-4">
         <h1>Stalarm</h1>
         <h2>Stock Data</h2>
-        <table class="table table-striped">
+        <table class="table table-striped stock_data_table">
             <thead>
                 <tr>
                     {% for column in columns %}
