Changed red color. Changed some var names. Changed web page header name to "Opening price"

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -45,8 +45,7 @@
 }
 
 #stockTable.table.table-striped.stock_data_table tr.table-danger-custom td {
-    background-color: #b22222; /* Firebrick red */
-    color: white;
+    background-color: #ff0000;
     font-weight: bold;
 }
 
