--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,6 +45,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     
     <!-- Custom JavaScript -->
+    <script src="{{ url_for('static', filename='highlightDescAlarmRows.js') }}"></script>
     <script src="{{ url_for('static', filename='highlightAlarmRows.js') }}"></script>
 </body>
 
